[package]
name = "epyxid"
version = "0.3.3"
edition = "2021"
description = "Python wrapper around the Rust implementation of xid"
license = "MIT"
repository = "https://github.com/als/epyxid"
documentation = "https://docs.rs/epyxid"
homepage = "https://github.com/als/epyxid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "epyxid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.23", features = ["extension-module"] }
xid = "1.1.1"

[profile.release]
lto = true
codegen-units = 1
